--- a/css/style.css
+++ b/css/style.css
@@ -73,12 +73,27 @@
 	margin-right: 20px;*/
 	margin-top: 40px;
 	margin-bottom: 40px;
+	padding: 20px;
 	border: thin solid black;
 	background-color: #DFACC0;
 	opacity: .9;
+	box-shadow: 5px 5px 3px 0px rgba(0, 0, 0, .9);
 	
 
 
+}
+
+h1 {
+text-shadow: 2px 2px 2px black;
+}
+
+ h2, h3, h4, h5, h6, p {
+	text-shadow: 1px 1px 1px black;
+}
+
+li p {
+	/*border: thin solid black;*/
+	margin-bottom: 0px;
 }
 
 .footer {
