--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,10 @@
 	margin-right: 20px;*/
 	margin-top: 40px;
 	margin-bottom: 40px;
+	margin-left: 15px;
+	margin-right: 15px;
 	padding: 20px;
-	border: thin solid black;
+	/*border: thin solid black;*/
 	background-color: #DFACC0;
 	opacity: .9;
 	box-shadow: 5px 5px 3px 0px rgba(0, 0, 0, .9);
@@ -97,6 +99,16 @@ text-shadow: 2px 2px 2px black;
 li p {
 	/*border: thin solid black;*/
 	margin-bottom: 0px;
+}
+
+.xsPhoneNoPadding {
+	/*border: thin solid black;*/
+	padding-top: 10px;
+}
+
+.xsEmailPadding{
+	/*border: thin solid black;*/
+	padding-top: 10px;
 }
 
 .footer {
