new page Joint project created. navigation updated on all pages for new page. Japan & Topics removed from workshop-content.html page. China-Australia relations moved up to the second position on workshop-content.html page. heading size increased to h2 and h3. home page content styled with white text. darker pink background added to all pages.

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,19 @@
 	background-size: auto	
 }
 
-#content {
+#contentGrid {
+	/*border: thin solid black;*/
+}
+
+#homePageTextColour {
+	color: white;
+	margin-top: 100px;
+	margin-bottom: 100px;
+	/*box-shadow: 5px 5px 3px 0px white;*/
+}
+
+.content {
+	/*color: white;*/
 	/*margin-left: 20px;
 	margin-right: 20px;*/
 	margin-top: 40px;
@@ -89,8 +101,10 @@
 	margin-left: 15px;
 	margin-right: 15px;
 	padding: 20px;
-	/*border: thin solid black;*/
-	background-color: #DFACC0;
+	/*border: thick solid white;*/
+	/*border-width: 20px;*/
+	/*background-color: #DFACC0;*/
+	background-color: #B58290;
 	opacity: .9;
 	box-shadow: 5px 5px 3px 0px rgba(0, 0, 0, .9);
 	
