capital letters added to index.html page content. display-5 added to jumbotron of each page except index.html. phone and email content moved to the left using Bootstrap Grid.  New section added to right of jointProjects.html using col-xl-6 and col-lg-6. Half-day workshops added to workshop-packages.html content. NB: content added to workshop-packages.html. New section added to about.html content using col-xl-6 col-lg-6. .homePadding style added for index.html content. img/399x454Kate.jpg, img/452x278Kate&Tanya.jpg added to project. tutorial.html page added to website. tutorial.html nav-link added to all pages.

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,11 @@
 
 }
 
+.homePadding {
+	padding-top: 10px; 
+	padding-bottom: 10px;
+}
+
 h1 {
 text-shadow: 2px 2px 2px black;
 }
@@ -128,6 +133,17 @@ li p {
 .xsPhoneNoPadding {
 	/*border: thin solid black;*/
 	padding-top: 10px;
+	/*padding-right: 100px;*/
+}
+
+.bi-telephone {
+	/*border: thin solid black;*/
+	/*padding-right: 50px;*/
+}
+
+.bi-envelope-fill {
+	/*border: thin solid black;*/
+	/*padding-right: 50px;*/
 }
 
 .xsEmailPadding{
